Modifique el Readme

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 
 <body>
+    <div>
     Nombre<input type="text"/>
     <button onclick="introducirNombre()">Aceptar</button> 
-      
+    </div>
     
     <div id="upperBar">
         <span id="nameLabel">Nombre : </span>
